--- a/admin.html
+++ b/admin.html
@@ -92,7 +92,7 @@ const firebaseConfig = {
 
     auth.onAuthStateChanged(async user => {
       if (!user) {
-        window.location.href = 'index.html';
+        window.location.href = 'admin.html';
         return;
       }
       const uid = user.uid;
