--- a/admin.html
+++ b/admin.html
@@ -5,72 +5,124 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin Panel</title>
   <style>
-    body {
-      margin: 0;
-      font-family: 'Press Start 2P', cursive;
-      background-color: #1e1e1e;
-      color: white;
-      display: flex;
-    }
-    .sidebar {
-      width: 220px;
-      background: #111;
-      height: 100vh;
-      padding: 20px;
-      box-sizing: border-box;
-    }
-    .sidebar button {
-      display: block;
-      width: 100%;
-      margin-bottom: 15px;
-      background: #333;
-      color: white;
-      border: none;
-      padding: 10px;
-      cursor: pointer;
-      font-size: 10px;
-    }
-    .main {
-      flex: 1;
-      padding: 20px;
-      overflow-y: auto;
-    }
-    .section {
-      display: none;
-    }
-    .section.active {
-      display: block;
-    }
-    .user-entry, .org-entry, .log-entry {
-      background: #292929;
-      margin-bottom: 10px;
-      padding: 10px;
-      border-radius: 5px;
-    }
-    .user-entry span, .org-entry span {
-      margin-right: 10px;
-    }
-    .member-list span {
-      display: inline-block;
-      margin: 5px;
-      background: #444;
-      padding: 3px 5px;
-      border-radius: 3px;
-    }
-    input[type="number"] {
-      width: 80px;
-      padding: 5px;
-      margin-left: 5px;
-    }
-    .action-btn {
-      margin-left: 10px;
-      background: #444;
-      color: white;
-      border: none;
-      padding: 5px 10px;
-      cursor: pointer;
-      font-size: 10px;
-    }
+body {
+  margin: 0;
+  font-family: 'Press Start 2P', cursive;
+  background-color: #1e1e1e;
+  color: #ffffff;
+  display: flex;
+}
+
+/* Sidebar */
+.sidebar {
+  width: 220px;
+  background: linear-gradient(180deg, #0f0f0f, #1a1a1a);
+  height: 100vh;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 4px 0 10px rgba(0, 0, 0, 0.4);
+}
+
+.sidebar button {
+  display: block;
+  width: 100%;
+  margin-bottom: 15px;
+  background: #2a2a2a;
+  color: #ffffff;
+  border: 1px solid #444;
+  padding: 12px;
+  cursor: pointer;
+  font-size: 10px;
+  border-radius: 8px;
+  transition: background 0.3s, transform 0.2s, box-shadow 0.3s;
+}
+
+.sidebar button:hover {
+  background: #3c3c3c;
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+}
+
+/* Main content */
+.main {
+  flex: 1;
+  padding: 30px;
+  overflow-y: auto;
+}
+
+/* Section visibility */
+.section {
+  display: none;
+}
+
+.section.active {
+  display: block;
+}
+
+/* Entries styling */
+.user-entry, .org-entry, .log-entry {
+  background: #2b2b2b;
+  margin-bottom: 15px;
+  padding: 15px;
+  border-radius: 10px;
+  border: 1px solid #3a3a3a;
+  transition: transform 0.2s, background 0.3s;
+}
+
+.user-entry:hover, .org-entry:hover, .log-entry:hover {
+  background: #333;
+  transform: scale(1.02);
+}
+
+.user-entry span, .org-entry span {
+  margin-right: 10px;
+}
+
+/* Member list style */
+.member-list span {
+  display: inline-block;
+  margin: 5px 5px 0 0;
+  background: #444;
+  padding: 5px 8px;
+  border-radius: 6px;
+  font-size: 9px;
+  transition: background 0.3s;
+}
+
+.member-list span:hover {
+  background: #5a5a5a;
+}
+
+/* Number inputs */
+input[type="number"] {
+  width: 80px;
+  padding: 6px 8px;
+  margin-left: 5px;
+  background: #222;
+  color: white;
+  border: 1px solid #555;
+  border-radius: 5px;
+  font-family: 'Press Start 2P', cursive;
+}
+
+/* Action buttons */
+.action-btn {
+  margin-left: 10px;
+  background: #444;
+  color: white;
+  border: 1px solid #666;
+  padding: 6px 12px;
+  cursor: pointer;
+  font-size: 10px;
+  border-radius: 6px;
+  transition: background 0.3s, transform 0.2s;
+}
+
+.action-btn:hover {
+  background: #5e5e5e;
+  transform: scale(1.05);
+}
+
   </style>
 </head>
 <body>
